// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-7hh7ya-TitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-p4470q-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-10oo6yi-StyledText-RightSpacedText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0 16px 0 0;
}

.cache-55v6gi-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #e6e9f0;
  opacity: inherit;
  cursor: default;
}

.cache-55v6gi-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-55v6gi-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt3 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-7hh7ya-TitleContainer elb23zt0"
    >
      <div
        class="cache-p4470q-StyledTitleContainer elb23zt2"
      >
        <h2
          class="elb23zt4 cache-10oo6yi-StyledText-RightSpacedText e1tg3t120"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-55v6gi-BorderedBox-StyledBox elb23zt1"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-7hh7ya-TitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-p4470q-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-10oo6yi-StyledText-RightSpacedText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0 16px 0 0;
}

.cache-1rh7aiq-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #390171;
  opacity: inherit;
  cursor: default;
}

.cache-1rh7aiq-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-1rh7aiq-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt3 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-7hh7ya-TitleContainer elb23zt0"
    >
      <div
        class="cache-p4470q-StyledTitleContainer elb23zt2"
      >
        <h2
          class="elb23zt4 cache-10oo6yi-StyledText-RightSpacedText e1tg3t120"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-1rh7aiq-BorderedBox-StyledBox elb23zt1"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-7hh7ya-TitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-p4470q-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-10oo6yi-StyledText-RightSpacedText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0 16px 0 0;
}

.cache-5qi24d-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #e6e9f0;
  opacity: 0.4;
  cursor: not-allowed;
}

.cache-5qi24d-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-5qi24d-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt3 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-7hh7ya-TitleContainer elb23zt0"
    >
      <div
        class="cache-p4470q-StyledTitleContainer elb23zt2"
      >
        <h2
          class="elb23zt4 cache-10oo6yi-StyledText-RightSpacedText e1tg3t120"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-5qi24d-BorderedBox-StyledBox elb23zt1"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .cache-17c1im2-StyledContainer {
  margin-top: 40px;
}

.cache-7hh7ya-TitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-p4470q-StyledTitleContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-10oo6yi-StyledText-RightSpacedText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0 16px 0 0;
}

.cache-f7t8ij-BorderedBox-StyledBox {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #e6e9f0;
  opacity: inherit;
  cursor: default;
}

.cache-f7t8ij-BorderedBox-StyledBox>* {
  margin-top: 0;
}

.cache-f7t8ij-BorderedBox-StyledBox>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt3 cache-17c1im2-StyledContainer"
  >
    <div
      class="cache-7hh7ya-TitleContainer elb23zt0"
    >
      <div
        class="cache-p4470q-StyledTitleContainer elb23zt2"
      >
        <h2
          class="elb23zt4 cache-10oo6yi-StyledText-RightSpacedText e1tg3t120"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-f7t8ij-BorderedBox-StyledBox elb23zt1"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
